src/snapshots/purs_oxide__parser__tests__minus_op.snap
---
source: src/parser.rs
expression: "parse_expr(\"x - y\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName {
                    symbol: Symbol {
                        [salsa id]: 0,
                        text: "x",
                    },
                    actually_qualified: false,
                },
            ),
        ),
        [
            (
                Symbol(
                    QualifiedName {
                        symbol: Symbol {
                            [salsa id]: 1,
                            text: "-",
                        },
                        actually_qualified: false,
                    },
                ),
                Located(
                    SourceSpan {
                        start: 4,
                        end: 5,
                    },
                    Var(
                        QualifiedName {
                            symbol: Symbol {
                                [salsa id]: 2,
                                text: "y",
                            },
                            actually_qualified: false,
                        },
                    ),
                ),
            ),
        ],
    ),
)
