src/snapshots/purs_oxide__parser__tests__module_header.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n        module Foo where\n        \"))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Foo",
            },
        ),
        start: 0,
        end: 16,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Foo",
            },
            exports: None,
            imports: [],
            declarations: [],
        },
    ),
)
