src/snapshots/purs_oxide__parser__tests__module_header_qualified.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n        module Some.Module where\n        \"))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Some.Module",
            },
        ),
        start: 0,
        end: 24,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Some.Module",
            },
            exports: None,
            imports: [],
            declarations: [],
        },
    ),
)
