src/snapshots/purs_oxide__parser__tests__named_pattern.snap
---
source: src/parser.rs
expression: "parse_expr(\"\\\\x@Nothing -> y\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 15,
    },
    Lam(
        [
            Located(
                SourceSpan {
                    decl: Module(
                        ModuleId {
                            name: "Test",
                        },
                    ),
                    start: 1,
                    end: 10,
                },
                Named(
                    Symbol {
                        text: "x",
                    },
                    Located(
                        SourceSpan {
                            decl: Module(
                                ModuleId {
                                    name: "Test",
                                },
                            ),
                            start: 3,
                            end: 10,
                        },
                        DataConstructorApp(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "Nothing",
                                },
                            },
                            [],
                        ),
                    ),
                ),
            ),
        ],
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 14,
                end: 15,
            },
            Var(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "y",
                    },
                },
            ),
        ),
    ),
)
