src/snapshots/purs_oxide__parser__tests__operator_decl.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n        module Test where\n        infix 1 f as !#\n        infixl 2 g as $%#\n        infixr 3 h as <@#%\n        infix 1 Foo as ^%\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 89,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 33,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: None,
                            precedence: 1,
                            name: Value(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "f",
                                    },
                                },
                            ),
                            operator: Symbol {
                                text: "!#",
                            },
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 34,
                        end: 51,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: Left,
                            precedence: 2,
                            name: Value(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "g",
                                    },
                                },
                            ),
                            operator: Symbol {
                                text: "$%#",
                            },
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 52,
                        end: 70,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: Right,
                            precedence: 3,
                            name: Value(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "h",
                                    },
                                },
                            ),
                            operator: Symbol {
                                text: "<@#%",
                            },
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 71,
                        end: 88,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: None,
                            precedence: 1,
                            name: DataConstructor(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "Foo",
                                    },
                                },
                            ),
                            operator: Symbol {
                                text: "^%",
                            },
                        },
                    ),
                ),
            ],
        },
    ),
)
