src/snapshots/purs_oxide__parser__tests__operator_decl_qualified.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n        module Test where\n        infix 1 Foo.f as !#\n        infix 2 Bar.X as ^%\n        infix 3 type Bar.X as $^%\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 84,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName(
                Symbol(
                    "Test",
                ),
            ),
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 37,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: None,
                            precedence: 1,
                            name: Value(
                                QualifiedName(
                                    Symbol(
                                        "Foo.f",
                                    ),
                                ),
                            ),
                            operator: Symbol(
                                "!#",
                            ),
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 38,
                        end: 57,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: None,
                            precedence: 2,
                            name: DataConstructor(
                                QualifiedName(
                                    Symbol(
                                        "Bar.X",
                                    ),
                                ),
                            ),
                            operator: Symbol(
                                "^%",
                            ),
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 58,
                        end: 83,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: None,
                            precedence: 3,
                            name: Type(
                                QualifiedName(
                                    Symbol(
                                        "Bar.X",
                                    ),
                                ),
                            ),
                            operator: Symbol(
                                "$^%",
                            ),
                        },
                    ),
                ),
            ],
        },
    ),
)
