src/snapshots/purs_oxide__parser__tests__parse_accessor_1.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"foo.bar\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 7,
    },
    Accessor(
        Located(
            SourceSpan {
                start: 0,
                end: 3,
            },
            Var(
                QualifiedName {
                    [salsa id]: 0,
                    module: None,
                    name: Symbol {
                        [salsa id]: 0,
                        text: "foo",
                    },
                },
            ),
        ),
        Symbol {
            [salsa id]: 1,
            text: "bar",
        },
    ),
)
