src/snapshots/purs_oxide__parser__tests__parse_accessor_3.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" foo.if \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 7,
    },
    Accessor(
        Located(
            SourceSpan {
                start: 1,
                end: 4,
            },
            Var(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "foo",
                    },
                },
            ),
        ),
        Symbol {
            text: "if",
        },
    ),
)
